<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_helpPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_phone_number" />

    <EditText
        android:id="@+id/et_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_helpPhoneNumber"
        android:layout_below="@+id/tv_helpPhoneNumber"
        android:ems="10"
        android:inputType="phone" 
        android:text="@string/default_phone_number">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_phoneNumber"
        android:layout_below="@+id/et_phoneNumber"
        android:text="@string/text_button_call" />

    <Button
        android:id="@+id/btn_add_contractor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_call"
        android:layout_below="@+id/btn_call"
        android:text="@string/text_button_add_contactor" />

    <Button
        android:id="@+id/btn_main_device_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_add_contractor"
        android:layout_centerHorizontal="true"
        android:text="@string/text_main_device_info" />

    <Button
        android:id="@+id/btn_main_jni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_main_device_info"
        android:layout_below="@+id/btn_main_device_info"
        android:text="@string/text_main_lua" />

    <Button
        android:id="@+id/btn_main_voice_record_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_main_jni"
        android:layout_below="@+id/btn_main_jni"
        android:text="@string/text_main_voice_record_list" />

</RelativeLayout>